fix overflow

--- a/ereact/src/Layout.css
+++ b/ereact/src/Layout.css
@@ -1,7 +1,9 @@
 .layout-container {
     height: 100vh;
-    weight: 100vw;
+    width: 100vw;
     background-color: rgba(245,228,215,0.5);
+    overflow: auto;
+    padding-bottom: 30px;
 }
 
 .card-container {
